list views working

--- a/src/app/main/components/listed-view/listed-view.component.html
+++ b/src/app/main/components/listed-view/listed-view.component.html
@@ -1,4 +1,5 @@
-<button mat-raised-button (click)="openEditModal()">+</button>
+<h2 class="title">{{presentationItem}}</h2>
+<button class="create-btn" mat-raised-button (click)="openEditModal()">+</button>
 <div class="categories-container">
   @for (item of items; track item.id) {
     <div class="category" (click)="navigate(item.id)">{{ item.name }}</div>
