--- a/src/app/main/components/to-do/to-do.component.html
+++ b/src/app/main/components/to-do/to-do.component.html
@@ -5,16 +5,18 @@ done
   <li>nawigacja + routing</li>
   <li>formularz tworzenia kategorii</li>
   <li>formularz tworzenia pytan</li>
+  <li>widok kategorii</li>
+  <li>generic component for both questions and categories</li>
 </ul>
 todo
 <ul>
-  <li>widok kategorii</li>
   <li>widok pytania</li>
+  <li>domyslna categoria dla tworzenia pytania</li>
+  <li>tworzenie nowej categorii w create question form</li>
   <li>usuwanie kategorii</li>
   <li>edycja kategorii</li>
   <li>usuwanie pytan</li>
   <li>edycja pytan</li>
-  <li>generic component for both questions and categories</li>
   <li>stan aplikacji + make components dumb</li>
   <li>display max length to put in position field for question</li>
   <li>struktura danych - najpierw kategoria, potem pytania</li>
