--- a/src/app/main/components/listed-view/listed-view.component.html
+++ b/src/app/main/components/listed-view/listed-view.component.html
@@ -1,7 +1,10 @@
 <h2 class="title">{{presentationItem}}</h2>
-<button class="create-btn" mat-raised-button (click)="openEditModal()">+</button>
+<button class="create-btn" mat-raised-button (click)="openEditModal()"><mat-icon>add</mat-icon></button>
 <div class="categories-container">
   @for (item of items; track item.id) {
-    <div class="category" (click)="navigate(item.id)">{{ item.name }}</div>
+    <div class="row">
+      <div class="category" (click)="navigate(item.id)">{{ item.name }}</div>
+      <button mat-raised-button class="delete-btn" (click)="deleteItem(item.id, item.name)"><mat-icon>delete</mat-icon></button>
+    </div>
   }
 </div>
