--- a/src/app/main/components/to-do/to-do.component.html
+++ b/src/app/main/components/to-do/to-do.component.html
@@ -10,13 +10,14 @@ done
 </ul>
 todo
 <ul>
-  <li>widok pytania</li>
-  <li>domyslna categoria dla tworzenia pytania</li>
-  <li>tworzenie nowej categorii w create question form</li>
   <li>usuwanie kategorii</li>
   <li>edycja kategorii</li>
   <li>usuwanie pytan</li>
   <li>edycja pytan</li>
+  <li>widok pytania</li>
+  <li>wysiwig dla odpowiedzi na pytania</li>
+  <li>domyslna categoria dla tworzenia pytania</li>
+  <li>tworzenie nowej categorii w create question form</li>
   <li>stan aplikacji + make components dumb</li>
   <li>display max length to put in position field for question</li>
   <li>struktura danych - najpierw kategoria, potem pytania</li>
