deleting items complete

--- a/src/app/main/components/listed-view/listed-view.component.html
+++ b/src/app/main/components/listed-view/listed-view.component.html
@@ -7,4 +7,10 @@
       <button mat-raised-button class="delete-btn" (click)="deleteItem(item.id, item.name)"><mat-icon>delete</mat-icon></button>
     </div>
   }
+// TODO: dodac kategorie pusta
+<!--  @if (presentationItem === PresentationItem.Category) {-->
+<!--    <div class="row">-->
+<!--      <div class="category" (click)="navigate(null)">Empty category</div>-->
+<!--    </div>-->
+<!--  }-->
 </div>
