--- a/src/app/main/components/to-do/to-do.component.html
+++ b/src/app/main/components/to-do/to-do.component.html
@@ -7,20 +7,20 @@ done
   <li>formularz tworzenia pytan</li>
   <li>widok kategorii</li>
   <li>generic component for both questions and categories</li>
+  <li>usuwanie pytan</li>
+  <li>usuwanie kategorii</li>
 </ul>
 todo
 <ul>
-  <li>usuwanie kategorii</li>
   <li>edycja kategorii</li>
-  <li>usuwanie pytan</li>
   <li>edycja pytan</li>
   <li>widok pytania</li>
   <li>wysiwig dla odpowiedzi na pytania</li>
   <li>domyslna categoria dla tworzenia pytania</li>
   <li>tworzenie nowej categorii w create question form</li>
   <li>stan aplikacji + make components dumb</li>
-  <li>display max length to put in position field for question</li>
-  <li>struktura danych - najpierw kategoria, potem pytania</li>
+  <li>wyswietlanie pytan nie posiadajacych kategorii</li>
+  <li>display max position to set for question</li>
   <li>zastanowic sie, czy kategoria powinna przechowywac id'ki pytan, czy pytania powinny miec id kategorii</li>
   <li>zmiana kolejnosci pytan (property order)</li>
   <li>drag n drop</li>
