--- a/src/app/main/components/listed-view/listed-view.component.scss
+++ b/src/app/main/components/listed-view/listed-view.component.scss
@@ -2,20 +2,15 @@
   text-transform: capitalize;
   margin: 10px;
 }
-.create-btn {
-  margin: 10px;
-
+.btn {
+  margin: 10px 10px 0;
   .mat-icon {
     margin: 0;
   }
 }
-
 .delete-btn {
-  margin: 10px 10px 0;
-
   .mat-icon {
     color: #ff9595;
-    margin: 0;
   }
 }
 
