--- a/src/app/main/components/question-form/question-form.component.html
+++ b/src/app/main/components/question-form/question-form.component.html
@@ -1,6 +1,6 @@
 <form [formGroup]="questionForm" class="form">
   <mat-form-field appearance="outline">
-    <mat-label>Category name</mat-label>
+    <mat-label>Question name</mat-label>
     <input
       formControlName="name"
       matInput
