edit mode ready

--- a/src/app/main/components/listed-view/listed-view.component.html
+++ b/src/app/main/components/listed-view/listed-view.component.html
@@ -1,5 +1,5 @@
 <h2 class="title">{{presentationItem}}</h2>
-<button class="create-btn" mat-raised-button (click)="openEditModal()"><mat-icon>add</mat-icon></button>
+<button class="btn" mat-raised-button (click)="openEditModal()"><mat-icon>add</mat-icon></button>
 <div class="categories-container">
   @for (item of items; track item.id) {
     <div class="row">
