--- a/src/app/main/components/to-do/to-do.component.html
+++ b/src/app/main/components/to-do/to-do.component.html
@@ -9,12 +9,15 @@ done
   <li>generic component for both questions and categories</li>
   <li>usuwanie pytan</li>
   <li>usuwanie kategorii</li>
+  <li>edycja kategorii</li>
+  <li>edycja pytan</li>
 </ul>
 todo
 <ul>
-  <li>edycja kategorii</li>
-  <li>edycja pytan</li>
   <li>widok pytania</li>
+  <li>pytania w sidebarze</li>
+  <li>przyciski next/prev w pytanieach</li>
+  <li>przycisk edit w widoku pytania</li>
   <li>wysiwig dla odpowiedzi na pytania</li>
   <li>domyslna categoria dla tworzenia pytania</li>
   <li>tworzenie nowej categorii w create question form</li>
