zajebiste kolory ikonek

--- a/src/app/main/components/questions-list/questions-list.component.scss
+++ b/src/app/main/components/questions-list/questions-list.component.scss
@@ -2,11 +2,12 @@
   height: 100vh;
 
   .main-nav {
-    background: #eee;
+    background: #8a9dff;
     width: 150px;
     border-radius: 0;
   }
 }
+
 .main-content {
   background: #fff;
 }
