--- a/src/app/main/components/to-do/to-do.component.html
+++ b/src/app/main/components/to-do/to-do.component.html
@@ -14,9 +14,10 @@ done
 </ul>
 todo
 <ul>
-  <li>widok pytania</li>
   <li>pytania w sidebarze</li>
+  <li>bug - nie zmienia sie pozycja przy edycji</li>
   <li>przyciski next/prev w pytanieach</li>
+  <li>widok pytania</li>
   <li>przycisk edit w widoku pytania</li>
   <li>wysiwig dla odpowiedzi na pytania</li>
   <li>domyslna categoria dla tworzenia pytania</li>
