bug fixed - category position didn't change

--- a/src/app/main/components/category-form/category-form.component.html
+++ b/src/app/main/components/category-form/category-form.component.html
@@ -16,7 +16,7 @@
     >
   </mat-form-field>
   <button
-    (click)="submitCategory()"
+    (click)="submitForm()"
     type="button"
     mat-button
   >Submit</button>
