--- a/src/app/main/components/question-form/question-form.component.html
+++ b/src/app/main/components/question-form/question-form.component.html
@@ -35,7 +35,7 @@
     </mat-select>
   </mat-form-field>
   <button
-    (click)="submitQuestion()"
+    (click)="submitForm()"
     type="button"
     mat-button
   >Submit</button>
