--- a/src/app/main/components/categories-list/categories-list.component.scss
+++ b/src/app/main/components/categories-list/categories-list.component.scss
@@ -1,3 +1,5 @@
+@import '../../../styles/variables';
+
 .main-container {
   height: 100vh;
 
@@ -23,7 +25,7 @@
   padding: 0 10px;
 
   &:hover {
-    color: #ae0000;
+    color: $delete-red;
     cursor: pointer;
   }
 }
@@ -33,7 +35,7 @@
   width: 99%;
 
   &:hover {
-    color: #1375fb;
+    color: $main-blue;
     cursor: pointer;
   }
 }
