--- a/src/app/main/components/main-screen/main-screen.component.scss
+++ b/src/app/main/components/main-screen/main-screen.component.scss
@@ -1,3 +1,5 @@
+@import '../../../styles/variables';
+
 .main-container {
   height: 100vh;
 
@@ -5,8 +7,22 @@
     background: #eee;
     width: 150px;
     border-radius: 0;
+
+    .list-item {
+      .nav-item {
+        transition: color .3s ease;
+      }
+
+      &:hover {
+        cursor: pointer;
+        .nav-item {
+          color: $main-blue;
+        }
+      }
+    }
   }
 }
-.main-content {
-  background: #fff;
-}
+
+  .main-content {
+    background: #fff;
+  }
