--- a/src/app/main/components/questions-list/questions-list.component.scss
+++ b/src/app/main/components/questions-list/questions-list.component.scss
@@ -1,13 +1,48 @@
+@import '../../../styles/variables';
+
 .main-container {
   height: 100vh;
 
   .main-nav {
-    background: #8a9dff;
-    width: 150px;
+    background: #fae1ff;
+    width: 250px;
     border-radius: 0;
   }
 }
 
 .main-content {
   background: #fff;
+}
+
+.title {
+  margin: 10px;
+}
+
+.delete-btn {
+  color: #000;
+  font-size: 20px;
+  transition: color .3s ease;
+  padding: 0 10px;
+
+  &:hover {
+    color: $delete-red;
+    cursor: pointer;
+  }
+}
+
+.category {
+  transition: color .3s ease;
+  width: 99%;
+
+  &:hover {
+    color: $main-blue;
+    cursor: pointer;
+  }
+}
+
+.category-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
