--- a/src/app/main/components/to-do/to-do.component.html
+++ b/src/app/main/components/to-do/to-do.component.html
@@ -16,7 +16,7 @@ done
 </ul>
 todo
 <ul>
-  <li>przyciski next/prev w pytanieach</li>
+  <li>przyciski next/prev w pytaniach</li>
   <li>widok pytania</li>
   <li>przycisk edit w widoku pytania</li>
   <li>wysiwig dla odpowiedzi na pytania</li>
