--- a/src/app/main/components/categories-list/categories-list.component.html
+++ b/src/app/main/components/categories-list/categories-list.component.html
@@ -1,6 +1,9 @@
 <mat-drawer-container class="main-container">
   <mat-drawer mode="side" opened class="main-nav">
-    <h3 class="title">Categories</h3>
+    <div class="title-container">
+      <h3 class="title">Categories</h3>
+      <mat-icon class="add-icon" (click)="openEditModal()">add</mat-icon>
+    </div>
     <mat-list role="list">
       @for (category of categories; track category.id) {
         <mat-list-item class="list-item">
