basic app is usable, only colors and some design left

--- a/src/app/main/components/category-form/category-form.component.html
+++ b/src/app/main/components/category-form/category-form.component.html
@@ -16,6 +16,7 @@
     >
   </mat-form-field>
   <button
+    [disabled]="!categoryForm.valid"
     (click)="submitForm()"
     type="button"
     mat-button
