--- a/src/app/main/components/delete-confirm/delete-confirm.component.scss
+++ b/src/app/main/components/delete-confirm/delete-confirm.component.scss
@@ -1,3 +1,5 @@
+@import '../../../styles/variables';
+
 .container {
   padding: 15px;
   display: flex;
@@ -13,7 +15,7 @@
   }
 
   .confirm-btn {
-    background: #ff9595;
+    background: $confirm-button;
     color: #fff;
   }
 }
