--- a/src/app/main/components/question-form/question-form.component.html
+++ b/src/app/main/components/question-form/question-form.component.html
@@ -35,6 +35,7 @@
     </mat-select>
   </mat-form-field>
   <button
+    [disabled]="!questionForm.valid"
     (click)="submitForm()"
     type="button"
     mat-button
