--- a/src/app/main/components/to-do/to-do.component.html
+++ b/src/app/main/components/to-do/to-do.component.html
@@ -13,16 +13,20 @@ done
   <li>edycja pytan</li>
   <li>pytania w sidebarze</li>
   <li>bug - nie zmienia sie pozycja przy edycji</li>
+  <li>przyciski next/prev w pytaniach</li>
+  <li>podswietlenie aktywnej kategorii/pytania</li>
+  <li>widok pytania</li>
+  <li>walidacja formularza</li>
 </ul>
 todo
 <ul>
-  <li>przyciski next/prev w pytaniach</li>
-  <li>widok pytania</li>
-  <li>przycisk edit w widoku pytania</li>
-  <li>wysiwig dla odpowiedzi na pytania</li>
+  <li>podrasowac wyglad, grafika w tle</li>
+
+  <li>nav - active element</li>
   <li>domyslna categoria dla tworzenia pytania</li>
-  <li>tworzenie nowej categorii w create question form</li>
   <li>stan aplikacji + make components dumb</li>
+  <li>przeniesc logike do stateservice albo ngrx</li>
+  <li>tworzenie nowej categorii w create question form</li>
   <li>wyswietlanie pytan nie posiadajacych kategorii</li>
   <li>display max position to set for question</li>
   <li>zastanowic sie, czy kategoria powinna przechowywac id'ki pytan, czy pytania powinny miec id kategorii</li>
@@ -33,5 +37,5 @@ todo
   <li>wyroznione pytania np 5 pierwszych, nad ktorymi pracuje aktualnie</li>
   <li>stworzyc bardziej zaawansowane todo</li>
   <li>stworzyc cos jak jire, do nauki programowania, dodac trakowanie codewarsow przez apke</li>
-  <li>nav - active element</li>
+  <li>wysiwig dla odpowiedzi na pytania</li>
 </ul>
