--- a/src/app/styles/_variables.scss
+++ b/src/app/styles/_variables.scss
@@ -1,2 +1,6 @@
 $main-blue: #1375fb;
 $delete-red: #ae0000;
+$active-item: #e7f2d6;
+$category-background: #e7ebff;
+$question-background: #fae1ff;
+$confirm-button: #ff9595;
