--- a/src/app/main/components/question-card/question-card.component.scss
+++ b/src/app/main/components/question-card/question-card.component.scss
@@ -5,5 +5,19 @@
     margin:  0 0 10px;
   }
 
+  .btn-group {
+    .btn {
+      margin-right: 5px;
+      color: #000;
+      padding: 0 15px;
+
+      mat-icon {
+        font-size: 20px;
+        margin: 0;
+
+      }
+    }
+  }
+
   .answer {}
 }
