--- a/src/app/main/components/delete-confirm/delete-confirm.component.html
+++ b/src/app/main/components/delete-confirm/delete-confirm.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <p class="message">Delete {{data.name}}?</p>
   <div class="btn-box">
-    <button mat-raised-button matDialogClose>no</button>
-    <button mat-raised-button (click)="confirm()" class="confirm-btn">yes</button>
+    <button mat-raised-button matDialogClose>No</button>
+    <button mat-raised-button (click)="confirm()" class="confirm-btn">Yes</button>
   </div>
 </div>
