--- a/src/app/main/components/to-do/to-do.component.html
+++ b/src/app/main/components/to-do/to-do.component.html
@@ -1,41 +1,42 @@
-
-done
-<ul>
-  <li>postawic backend - spring</li>
-  <li>nawigacja + routing</li>
-  <li>formularz tworzenia kategorii</li>
-  <li>formularz tworzenia pytan</li>
-  <li>widok kategorii</li>
-  <li>generic component for both questions and categories</li>
-  <li>usuwanie pytan</li>
-  <li>usuwanie kategorii</li>
-  <li>edycja kategorii</li>
-  <li>edycja pytan</li>
-  <li>pytania w sidebarze</li>
-  <li>bug - nie zmienia sie pozycja przy edycji</li>
-  <li>przyciski next/prev w pytaniach</li>
-  <li>podswietlenie aktywnej kategorii/pytania</li>
-  <li>widok pytania</li>
-  <li>walidacja formularza</li>
-</ul>
-todo
-<ul>
-  <li>podrasowac wyglad, grafika w tle</li>
-
-  <li>nav - active element</li>
-  <li>domyslna categoria dla tworzenia pytania</li>
-  <li>stan aplikacji + make components dumb</li>
-  <li>przeniesc logike do stateservice albo ngrx</li>
-  <li>tworzenie nowej categorii w create question form</li>
-  <li>wyswietlanie pytan nie posiadajacych kategorii</li>
-  <li>display max position to set for question</li>
-  <li>zastanowic sie, czy kategoria powinna przechowywac id'ki pytan, czy pytania powinny miec id kategorii</li>
-  <li>zmiana kolejnosci pytan (property order)</li>
-  <li>drag n drop</li>
-  <li>system punktacji i zliczania dobrych i zlych odp</li>
-  <li>subchapters</li>
-  <li>wyroznione pytania np 5 pierwszych, nad ktorymi pracuje aktualnie</li>
-  <li>stworzyc bardziej zaawansowane todo</li>
-  <li>stworzyc cos jak jire, do nauki programowania, dodac trakowanie codewarsow przez apke</li>
-  <li>wysiwig dla odpowiedzi na pytania</li>
-</ul>
+<div class="container">
+  done
+  <ul>
+    <li>postawic backend - spring</li>
+    <li>nawigacja + routing</li>
+    <li>formularz tworzenia kategorii</li>
+    <li>formularz tworzenia pytan</li>
+    <li>widok kategorii</li>
+    <li>generic component for both questions and categories</li>
+    <li>usuwanie pytan</li>
+    <li>usuwanie kategorii</li>
+    <li>edycja kategorii</li>
+    <li>edycja pytan</li>
+    <li>pytania w sidebarze</li>
+    <li>bug - nie zmienia sie pozycja przy edycji</li>
+    <li>przyciski next/prev w pytaniach</li>
+    <li>podswietlenie aktywnej kategorii/pytania</li>
+    <li>widok pytania</li>
+    <li>walidacja formularza</li>
+    <li>podrasowac wyglad, grafika w tle</li>
+    <li>nav - active element</li>
+    <li>domyslna categoria dla tworzenia pytania</li>
+  </ul>
+  todo
+  <ul>
+    <li>deploy apki</li>
+    <li>stan aplikacji + make components dumb</li>
+    <li>przeniesc logike do stateservice albo ngrx</li>
+    <li>tworzenie nowej categorii w create question form</li>
+    <li>wyswietlanie pytan nie posiadajacych kategorii</li>
+    <li>display max position to set for question</li>
+    <li>zastanowic sie, czy kategoria powinna przechowywac id'ki pytan, czy pytania powinny miec id kategorii</li>
+    <li>zmiana kolejnosci pytan (property order)</li>
+    <li>drag n drop</li>
+    <li>system punktacji i zliczania dobrych i zlych odp</li>
+    <li>subchapters</li>
+    <li>wyroznione pytania np 5 pierwszych, nad ktorymi pracuje aktualnie</li>
+    <li>stworzyc bardziej zaawansowane todo</li>
+    <li>stworzyc cos jak jire, do nauki programowania, dodac trakowanie codewarsow przez apke</li>
+    <li>wysiwig dla odpowiedzi na pytania</li>
+  </ul>
+</div>
