--- a/src/app/main/components/to-do/to-do.component.html
+++ b/src/app/main/components/to-do/to-do.component.html
@@ -20,6 +20,9 @@
     <li>podrasowac wyglad, grafika w tle</li>
     <li>nav - active element</li>
     <li>domyslna categoria dla tworzenia pytania</li>
+    <li>colory</li>
+    <li>wysiwig dla odpowiedzi na pytania</li>
+    <li>po edycji pytania - pytanie powinno sie odswiezyc w question card</li>
   </ul>
   todo
   <ul>
@@ -37,6 +40,5 @@
     <li>wyroznione pytania np 5 pierwszych, nad ktorymi pracuje aktualnie</li>
     <li>stworzyc bardziej zaawansowane todo</li>
     <li>stworzyc cos jak jire, do nauki programowania, dodac trakowanie codewarsow przez apke</li>
-    <li>wysiwig dla odpowiedzi na pytania</li>
   </ul>
 </div>
