--- a/src/app/main/components/question-card/question-card.component.html
+++ b/src/app/main/components/question-card/question-card.component.html
@@ -6,6 +6,6 @@
     <button class="btn" mat-raised-button (click)="move()"><mat-icon>chevron_right</mat-icon></button>
   </div>
   @if (showAnswer) {
-    <p class="answer">{{question?.answer}}</p>
+    <p class="answer" [innerHTML]="question?.answer"></p>
   }
 </div>
