--- a/src/app/main/components/to-do/to-do.component.html
+++ b/src/app/main/components/to-do/to-do.component.html
@@ -1,4 +1,20 @@
 <div class="container">
+  todo
+  <ul>
+    <li>expression changed error</li>
+    <li>deploy apki</li>
+
+    <li>stan aplikacji + make components dumb</li>
+    <li>przeniesc logike do stateservice albo ngrx</li>
+    <li>wyswietlanie pytan nie posiadajacych kategorii</li>
+
+    <li>zmiana kolejnosci pytan (property order) - drag n drop</li>
+    <li>system punktacji i zliczania dobrych i zlych odp</li>
+    <li>subchapters</li>
+    <li>wyroznione pytania np 5 pierwszych, nad ktorymi pracuje aktualnie</li>
+    <li>stworzyc bardziej zaawansowane todo</li>
+    <li>stworzyc cos jak jire, do nauki programowania, dodac trakowanie codewarsow przez apke</li>
+  </ul>
   done
   <ul>
     <li>postawic backend - spring</li>
@@ -23,22 +39,5 @@
     <li>colory</li>
     <li>wysiwig dla odpowiedzi na pytania</li>
     <li>po edycji pytania - pytanie powinno sie odswiezyc w question card</li>
-  </ul>
-  todo
-  <ul>
-    <li>deploy apki</li>
-    <li>stan aplikacji + make components dumb</li>
-    <li>przeniesc logike do stateservice albo ngrx</li>
-    <li>tworzenie nowej categorii w create question form</li>
-    <li>wyswietlanie pytan nie posiadajacych kategorii</li>
-    <li>display max position to set for question</li>
-    <li>zastanowic sie, czy kategoria powinna przechowywac id'ki pytan, czy pytania powinny miec id kategorii</li>
-    <li>zmiana kolejnosci pytan (property order)</li>
-    <li>drag n drop</li>
-    <li>system punktacji i zliczania dobrych i zlych odp</li>
-    <li>subchapters</li>
-    <li>wyroznione pytania np 5 pierwszych, nad ktorymi pracuje aktualnie</li>
-    <li>stworzyc bardziej zaawansowane todo</li>
-    <li>stworzyc cos jak jire, do nauki programowania, dodac trakowanie codewarsow przez apke</li>
   </ul>
 </div>
